--- a/Grocers/src/app/dry-fruits/dry-fruits.component.html
+++ b/Grocers/src/app/dry-fruits/dry-fruits.component.html
@@ -9,7 +9,7 @@
         <div class="product-item">
           <img src="../../assets/images/products/almonds.jpg" class="card-img-top" alt="" routerLink="/product-single">
           <div class="textcontent mt-2">
-            <h5 class="fw-bold">Watermelon</h5>
+            <h5 class="fw-bold">Almonds</h5>
             <div class="row mt-3 mb-2">
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                 <div class="row">
@@ -28,7 +28,7 @@
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 mb-3">
                 <div class="float-end">
                   <p class="float-end fs-6 fw-bold m-0">
-                    Price: <span class="fs-6">$2.5/Kg</span>
+                    Price: <span class="fs-6">$5.5/Kg</span>
                   </p>
                 </div>
               </div>
