--- a/Grocers/src/app/fruits/fruits.component.html
+++ b/Grocers/src/app/fruits/fruits.component.html
@@ -7,9 +7,9 @@
 
       <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
         <div class="product-item">
-          <img src="../../assets/images/products/fruit_2.jpg" class="card-img-top" alt="" routerLink="/product-single">
+          <img src="../../assets/images/products/Strawberry.jpg" class="card-img-top" alt="" routerLink="/product-single">
           <div class="textcontent mt-2">
-            <h5 class="fw-bold">Watermelon</h5>
+            <h5 class="fw-bold">Strawberry</h5>
             <div class="row mt-3 mb-2">
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                 <div class="row">
