--- a/Grocers/src/app/cart/cart.component.html
+++ b/Grocers/src/app/cart/cart.component.html
@@ -17,8 +17,8 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row" class="pl-0"><img src="../../assets/images/products/product1.jpg" width="100px" alt=""></th>
-                <td class="text-success small-fnt">Fresh Vegitables</td>
+                <th scope="row" class="pl-0"><img src="../../assets/images/products/Broccoli.jpg" width="100px" alt=""></th>
+                <td class="text-success small-fnt">Broccoli</td>
                 <td class="text-success small-fnt">1Kg</td>
                 <td class="text-success small-fnt">$2.5</td>
                 <td class="text-success small-fnt">
@@ -27,10 +27,10 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row"  class="pl-0"><img src="../../assets/images/products/product2.jpg" width="100px" alt=""></th>
-                <td class="text-success small-fnt">Fresh Vegitables</td>
+                <th scope="row"  class="pl-0"><img src="../../assets/images/products/Peppers.jpg" width="100px" alt=""></th>
+                <td class="text-success small-fnt">Peppers</td>
                 <td class="text-success small-fnt">1Kg</td>
-                <td class="text-success small-fnt">$1.5</td>
+                <td class="text-success small-fnt">$1.8</td>
                 <td class="text-success small-fnt">
                   <button class="default-green-btn" style="font-size:11px;background-color:#668c5b;border: none;">+</button> &nbsp;
                   <button class="default-green-btn" style="font-size:11px;background-color:#e14a4a;border: none;">-</button>
