--- a/Grocers/src/app/combo/combo.component.html
+++ b/Grocers/src/app/combo/combo.component.html
@@ -1,1 +1,44 @@
-<p>combo works!</p>
+
+<h2 class="fw-bolder text-center mt-5">Dry Fruits</h2>
+<div class="mainboxcontent products mb-5">
+  <div class="container-fluid">
+
+    <div class="row">
+
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+        <div class="product-item">
+          <img src="../../assets/images/products/combo.jpg" class="card-img-top" alt="" routerLink="/product-single">
+          <div class="textcontent mt-2">
+            <h5 class="fw-bold">Combo</h5>
+            <div class="row mt-3 mb-2">
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="row">
+                  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-4 pr-0"><span class="fw-bold">Qty</span></div>
+                  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-9 col-8 pl-0">
+                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                      <option selected>1</option>
+                      <option value="1">2</option>
+                      <option value="2">3</option>
+                      <option value="3">4</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 mb-3">
+                <div class="float-end">
+                  <p class="float-end fs-6 fw-bold m-0">
+                    Price: <span class="fs-6">$5.5/Kg</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <a class="btn default-green-btn btn-sm col-12 mb-3">Add To Cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<app-product-category-slider></app-product-category-slider>
