added single product image

--- a/Grocers/src/app/product-single/product-single.component.html
+++ b/Grocers/src/app/product-single/product-single.component.html
@@ -11,12 +11,12 @@
     <div class="productitem mt-5 mb-3">
       <div class="row">
         <div class="col-md-6 mt-2 mb-3">
-          <img src="../../assets/images/products/product1.jpg" class="productFeatureImage">
+          <img src="../../assets/images/products/combo.jpg" class="productFeatureImage">
         </div>
 
         <div class="col-md-6">
           <div class="productDetail">
-            <h2 class="fw-bold">Product Name</h2>
+            <h2 class="fw-bold">Combo</h2>
             <p class="mt-5">4.6 rating <span style="color: #668c5b;">(customer reviews)</span></p>
             <h4 class="fw-bold mt-3 mb-3">$5.00</h4>
             <p>
